--- a/Project1/README
+++ b/Project1/README
@@ -1,1 +1,33 @@
+# Flight Management System Design
 
+## Overview
+The **Flight Management System (FMS)** is a robust solution designed to streamline the creation, processing, and management of flight plans and flight strips. It ensures seamless integration with external systems like the Flight Archive System (FAS) and Route Finder System (RFS) while prioritizing user security and operational efficiency.
+
+This project leverages **Unified Modeling Language (UML)** to design and visualize system components, interactions, and workflows.
+
+## Features
+- **Flight Plan Management**: Create and validate flight plans with detailed airport and pilot data.
+- **Flight Strip Handling**: Generate, process, and archive flight strips linked to active flight plans.
+- **Security First**: Enforces secure access through PIN validation and data encryption.
+- **System Interoperability**: Smooth communication with external systems for route finding and flight data archival.
+
+## Contents
+This project includes:
+- A detailed **FMS Design Document** (`FMSDESIGN.pdf`), covering:
+  - Assumptions and expectations.
+  - Functional and non-functional requirements.
+  - Use case diagrams and specifications (created using UML).
+  - Traceability Matrix.
+  - Class Diagram (created using UML).
+  - Sequence and activity diagrams (created using UML).
+  - State machine diagrams (created using UML).
+  - Test case scenarios.
+
+## Usage
+1. Clone this repository to your local machine.
+2. Open the `FMSDESIGN.pdf` file to explore the system design in detail.
+3. Follow the documentation for insights into implementing or extending the Flight Management System.
+
+---
+
+Feel free to explore the design document and share your feedback!
